syntax = "proto2";
package syncdirectory;

enum ESyncMsgCode {
    EInitDirectory = 0;
    EPushDirectory = 1; /*drop server file, use client file*/
    EPullDirectory = 2; /*drop client file, use server file*/
    ESyncDirectory = 3; /*client to server, and server to client, sync*/
    EPushFile = 4;
    EPullFile = 5;
    EDeleteFile = 6;
    EMoveFile = 7;
}

message MInitDirectory {
    optional string root = 1; 
}

message MPushDirectory {

}

message MPullDirectory {

}

message MSyncDirectory {

}

message MPushFile {
    optional string root = 1;
    optional string fileName = 2;
    optional int32 fileSize = 3; 
    optional string fileDir = 4; /*The parent directory of the file.*/
}

message MPullFile {

}

message MDeleteFile {

}

message MMoveFile {

}


